2008-05-19  Thomas Schwinge  <tschwinge@gnu.org>

	[patch #6508 -- Building with -g3]
	* Makefile.am (MIGCOM): Let it filter through CPP again.
	Suggested by Andrei Barbu <teval0@gmail.com>.

2008-05-09  Andrei Barbu  <teval0@gmail.com>

	* i386/i386/loose_ends.c (DELAY): Use volatile qualifier instead of
	register to prevent optimization.

2008-03-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* doc/Makefrag.am: Fix typo.

2008-03-07  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/locore.S (syscall): Clear direction flag at entry.

2008-02-06  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* linux/src/drivers/block/triton.c (ide_init_triton): Enable Bus
	Mastering if not enabled by BIOS.

2007-12-30  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* kern/debug.c (panic) [MACH_KDB]: Don't wait before running the
	debugger.
	* linux/dev/glue/block.c (MAX_BUF): Set to sane stack-friendly 8
	instead of blindly following VM_MAP_COPY_PAGE_LIST_MAX.
	(rdwr_full): increment blk by cc >> bshift instead of nb.

2007-12-11  Thomas Schwinge  <tschwinge@gnu.org>

	* linux/dev/include/linux/nfs.h: Remove unused file.
	* linux/src/include/linux/nfs.h: Likewise.

2007-12-10  Thomas Schwinge  <tschwinge@gnu.org>

	* i386/Makefrag.am (i386/i386at/boothdr.o, i386/i386at/interrupt.o)
	(i386/i386/cswitch.o, i386/i386/locore.o): Remove targets.
	* configure.ac <Dependency tracking for `.S' files>: Add a hack to
	re-add the four targets with have been removed above for the (legacy)
	case only where they are actually needed.

2007-12-05  Guillem Jover  <guillem@hadrons.org>

	* i386/Makefrag.am (i386/i386at/interrupt.o): New target, depends on
	i386/i386/i386asm.h
	(i386/i386/cswitch.o): Likewise.
	(i386/i386/locore.o): Likewise.

2007-11-18  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/intel/pmap.c (pmap_map_bd): Use
	INTEL_PTE_NCACHE|INTEL_PTE_WTHRU.  Get pmap lock.

2007-11-15  Samuel Thibault  <samuel.thibault@ens-lyon.org>
